# grainlify

./: ASSIGNMENT_COMPLETE.md  BUILDINFO_IMPLEMENTATION_SUMMARY.md  DRAFT_STATE_IMPLEMENTATION.md  DRAFT_STATE_QUICK_REFERENCE.md  DRAFT_STATE_SUMMARY.md  GAS_OPTIMIZATION_STATUS.md  GAS_OPTIMIZATION_SUMMARY.md  IDEMPOTENCY_KEYS_IMPLEMENTATION.md  ISSUE_1001_IMPLEMENTATION_SUMMARY.md  ISSUE_757_COMPLETION_SUMMARY.md  PR_DRAFT_STATE.md  PR_EVENT_SCHEMA_AUDIT.md  PR_TEMPLATE_ISSUE_757.md  README.md  VERCEL_DEPLOYMENT_SETUP.md  build3.txt  build_output.txt  deny.toml  design-tokens.json  run_test.bat
contracts/: .gitignore  Cargo.toml  DELEGATE_PERMISSION_MATRIX.md  ERRORS.md  FEE_MECHANISM.md  SERIALIZATION_COMPATIBILITY_TESTS.md  STORAGE_KEY_AUDIT.md  STORAGE_KEY_IMPLEMENTATION_COMPLETE.md  STRICT_MODE.md  bounty-escrow-manifest.json  grainlify-core-manifest.json  program-escrow-manifest.json
contracts/benchmarks/: batch_performance.rs
contracts/bounty_escrow/: ANONYMIZATION.md  Cargo.toml  README.md
contracts/bounty_escrow/deployments/: testnet.json
contracts/bounty_escrow/docs/: DETERMINISTIC_RANDOMNESS.md
contracts/escrow-view-facade/src/: bounty_escrow_bindings.rs  test.rs
contracts/grainlify-core/: BUILD_INFO_EVENT.md  Cargo.toml  MIGRATION.md  STORAGE_LAYOUT.md  UPGRADE_ROLLBACK_PATTERNS.md  governance_config.md  nonce.md
contracts/grainlify-core/src/: commit_reveal.rs  errors.rs  governance.rs  lib.rs  multisig.rs  nonce.rs  serialization_goldens.rs  strict_mode.rs  test_core_monitoring.rs  test_liveness_watchdog.rs  test_pseudo_randomness.rs  test_serialization_compatibility.rs  test_storage_layout.rs  test_strict_mode.rs  test_timelocked_pause.rs
contracts/grainlify-core/tests/: test_storage_layout.rs
contracts/program-escrow/: Cargo.toml  README.md  STORAGE_LAYOUT.md
contracts/program-escrow/src/: claim_period.rs  error_recovery.rs  error_recovery_tests.rs  errors.rs  gas_optimization.rs  lib.rs  metadata.rs  payout_splits.rs  serialization_goldens.rs  test.rs  test_allowance.rs  test_archival.rs  test_batch_limits.rs  test_batch_operations.rs  test_batch_receipts.rs  test_circuit_breaker_audit.rs  test_claim_period_expiry_cancellation.rs  test_deterministic_error_ordering.rs  test_dispute_resolution.rs  test_full_lifecycle.rs  (+18 more)
contracts/scripts/: deploy.sh  validate-manifests.js  validate-manifests.sh
contracts/sdk/: tsconfig.json
contracts/src/: lib.rs  main.rs  storage_collision_tests.rs  storage_key_audit.rs
contracts/view-facade/: Cargo.toml  DUPLICATE_REGISTRATION_POLICY.md  ISSUE_953_COMPLETION_SUMMARY.md  PR_TEMPLATE_ISSUE_953.md  REGISTRY_LIMITS.md  SECURITY_NOTES.md  TEST_VALIDATION_SUMMARY.md
(+829 files in other folders)
