[package]
name = "grainlify-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
soroban-sdk = "20.0.0"

[dev-dependencies]
soroban-sdk = { version = "20.0.0", features = ["testutils"] }

[lib]
name = "grainlify_contracts"
path = "src/lib.rs"

[[bin]]
name = "grainlify_contracts"
path = "src/main.rs"
