[package]
name = "grainlify-core"
version = "0.1.0"
edition = "2021"

[lib]
# Keep rlib for host-side tests and cdylib so CI/E2E can produce the deployable
# grainlify_core.wasm artifact expected by the upgrade workflows.
crate-type = ["rlib", "cdylib"]

[features]
default = ["contract"]
contract = []
upgrade_rollback_tests = []
governance_contract_tests = []
wasm_tests = []

[dependencies]
soroban-sdk = "21.0.0"

[dev-dependencies]
soroban-sdk = { version = "21.0.0", features = ["testutils"] }

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
