[package]
name = "program-escrow"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[features]
default = []
strict-mode = ["grainlify-core/strict-mode"]

[dependencies]
soroban-sdk = "=21.7.7"
grainlify-core = { path = "../grainlify-core", default-features = false }

[dev-dependencies]
soroban-sdk = { version = "=21.7.7", features = ["testutils"] }

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
