[package]
name = "escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
grainlify-core = { path = "../../../contracts/grainlify-core", default-features = false }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }
ed25519-dalek = { version = "2", default-features = false, features = ["rand_core"] }
rand = "0.8"
