[package]
name = "bounty-escrow"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["lib", "cdylib"]
doctest = false

[features]
default = []
strict-mode = ["grainlify-core/strict-mode"]
metadata_tagging = []
legacy-tests = []
testutils = []

[dependencies]
soroban-sdk = { workspace = true }
grainlify-core = { path = "../../../grainlify-core", default-features = false }
grainlify-contracts = { path = "../../../" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["alloc", "testutils"] }
